@@ -48,11 +48,10 @@ copyright = u'2011, holger krekel et alii'
 # |version| and |release|, also used in various other places throughout the
 # built documents.
 #
-# The short X.Y version.
-version = '2.0'
 # The full version, including alpha/beta/rc tags.
 import pytest
 release = pytest.__version__
+# The short X.Y version.
 version = ".".join(release.split(".")[:2])
 
 # The language for content autogenerated by Sphinx. Refer to documentation
@@ -184,7 +183,7 @@ htmlhelp_basename = 'pytestdoc'
 # Grouping the document tree into LaTeX files. List of tuples
 # (source start file, target name, title, author, documentclass [howto/manual]).
 latex_documents = [
-  ('index', 'pytest.tex', u'pytest Documentation',
+  ('contents', 'pytest.tex', u'pytest Documentation',
    u'holger krekel et alii', 'manual'),
 ]
 
@@ -228,7 +227,7 @@ man_pages = [
 epub_title = u'pytest'
 epub_author = u'holger krekel et alii'
 epub_publisher = u'holger krekel et alii'
-epub_copyright = u'2010, holger krekel et alii'
+epub_copyright = u'2011, holger krekel et alii'
 
 # The language of the text. It defaults to the language option
 # or en if the language is not set.
