@@ -1,8 +1,12 @@
 
 .. _toc:
 
-Table of Contents
+Full pytest documenation
 ========================
+
+`Download latest version as PDF <http://media.readthedocs.org/pdf/pytest/latest/pytest.pdf>`_
+
+.. `Download latest version as EPUB <http://media.readthedocs.org/epub/pytest/latest/pytest.epub>`_
 
 .. toctree::
    :maxdepth: 2
